--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12067,7 +12067,7 @@ section.home-search .home-search-mobile {
   width: 100%;
   font-size: 1em;
   background-color: white;
-  color: #9a9a9a;
+  color: #595959;
   font-size: 1.5em; }
   #content.search .new-filters .filter-header {
     background-color: #f7f7f7;
@@ -12088,6 +12088,23 @@ section.home-search .home-search-mobile {
     border-bottom: 1px solid #e6e6e6; }
     #content.search .new-filters .filter-header .header-title {
       max-width: 60%; }
+  #content.search .new-filters span.title {
+    color: #595959;
+    font-size: 1.1em;
+    font-weight: 400; }
+  #content.search .new-filters .selections {
+    padding: 5px 10px; }
+    #content.search .new-filters .selections label span:nth-child(3) {
+      margin-left: 25px; }
+      #content.search .new-filters .selections label span:nth-child(3):before {
+        content: ' ';
+        background: url(../img/search/star-red.svg) no-repeat center center;
+        background-size: contain;
+        width: 18px;
+        height: 18px;
+        position: absolute;
+        left: 37px;
+        top: 7px; }
   #content.search .new-filters .location, #content.search .new-filters .business-name {
     padding: 15px 10px 20px 10px; }
     #content.search .new-filters .location input, #content.search .new-filters .business-name input {
@@ -12138,7 +12155,7 @@ section.home-search .home-search-mobile {
       margin-top: 10px; }
     #content.search .new-filters .location .btn-around, #content.search .new-filters .business-name .btn-around {
       background-color: #f7f7f7;
-      color: #9a9a9a;
+      color: #595959;
       font-weight: 200;
       width: 100%;
       height: 40px;
@@ -12159,7 +12176,7 @@ section.home-search .home-search-mobile {
     line-height: 50px;
     padding-left: 10px;
     padding-right: 10px;
-    color: #9a9a9a; }
+    color: #595959; }
     #content.search .new-filters .filters-category:hover {
       text-decoration: none; }
     #content.search .new-filters .filters-category:after {
@@ -12184,8 +12201,7 @@ section.home-search .home-search-mobile {
     margin-left: 0; }
   #content.search .new-filters .promo-line {
     height: 50px;
-    line-height: 50px;
-    border-bottom: 1px solid #e6e6e6; }
+    line-height: 50px; }
     #content.search .new-filters .promo-line input[type="checkbox"] + span {
       padding-left: 25px; }
     #content.search .new-filters .promo-line:before {
@@ -12259,6 +12275,11 @@ section.home-search .home-search-mobile {
     top: 10px;
     color: #fe5b5f;
     font-size: 2em; }
+  #content.search .new-filters .underliner {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    border-color: #595959;
+    opacity: 0.3; }
 
 #content.search .subfilters {
   z-index: 202;
@@ -12611,9 +12632,10 @@ section.home-search .home-search-mobile {
   @media screen and (max-width: 767px) {
     #content.search .main-content .tab-pane#salons .image-bloc, #content.search .main-content .tab-pane#adom .image-bloc {
       width: 100%;
-      height: auto;
+      height: 124px;
       margin-bottom: 5px;
-      position: relative; }
+      position: relative;
+      overflow: hidden; }
       #content.search .main-content .tab-pane#salons .image-bloc .icon-promo, #content.search .main-content .tab-pane#adom .image-bloc .icon-promo {
         position: absolute;
         top: 5px;
@@ -12623,13 +12645,20 @@ section.home-search .home-search-mobile {
   #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
     display: block;
     min-height: 0;
-    max-height: none;
-    height: 220px;
-    width: 220px; }
+    max-height: none; }
     @media screen and (max-width: 767px) {
       #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
         width: 100%;
-        height: 124px; } }
+        margin-top: -150px; } }
+    @media screen and (max-width: 700px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
+        margin-top: -120px; } }
+    @media screen and (max-width: 540px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
+        margin-top: -50px; } }
+    @media screen and (max-width: 435px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
+        margin-top: -15px; } }
   #content.search .main-content .tab-pane#salons .image-bloc .promo-bloc, #content.search .main-content .tab-pane#adom .image-bloc .promo-bloc {
     background-color: #ffc400;
     color: white;
@@ -12711,7 +12740,7 @@ section.home-search .home-search-mobile {
         align-items: center; } }
   #content.search .main-content .tab-pane#salons .info-bloc .label-container, #content.search .main-content .tab-pane#adom .info-bloc .label-container {
     overflow: hidden;
-    height: 35px;
+    max-height: 35px;
     background-color: white; }
     #content.search .main-content .tab-pane#salons .info-bloc .label-container .business-label, #content.search .main-content .tab-pane#adom .info-bloc .label-container .business-label {
       color: white;
@@ -12876,7 +12905,8 @@ section.home-search .home-search-mobile {
   #content.search .sidebar .underliner {
     height: 1px;
     width: calc(100% - 50px);
-    border-color: #a9aeb1;
+    border-color: #595959;
+    opacity: 0.3;
     margin-top: -10px;
     margin-bottom: 0; }
     #content.search .sidebar .underliner.discount {
