--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12106,7 +12106,7 @@ section.home-search .home-search-mobile {
         left: 37px;
         top: 7px; }
   #content.search .new-filters .location, #content.search .new-filters .business-name {
-    padding: 15px 10px 20px 10px; }
+    padding: 5px 10px 20px 10px; }
     #content.search .new-filters .location input, #content.search .new-filters .business-name input {
       border-top-width: 1px;
       outline: none;
@@ -12161,7 +12161,7 @@ section.home-search .home-search-mobile {
       height: 40px;
       border: 1px solid #e6e6e6;
       border-radius: 2px; }
-      #content.search .new-filters .location .btn-around:before, #content.search .new-filters .business-name .btn-around:before {
+      #content.search .new-filters .location .btn-around .around-text:before, #content.search .new-filters .business-name .btn-around .around-text:before {
         content: ' ';
         background: url(../img/search/location-new.svg) no-repeat center center;
         background-size: contain;
@@ -12275,6 +12275,10 @@ section.home-search .home-search-mobile {
     top: 10px;
     color: #fe5b5f;
     font-size: 2em; }
+  #content.search .new-filters .price-notice {
+    color: #c4c4c4;
+    margin-left: 10px;
+    font-size: 0.8em; }
   #content.search .new-filters .underliner {
     margin-top: 0px;
     margin-bottom: 5px;
@@ -12322,9 +12326,7 @@ section.home-search .home-search-mobile {
     margin-bottom: 10px; }
     @media screen and (max-width: 767px) {
       #content.search .main-content .header-part h1 {
-        margin: 5px 0 20px 10px;
-        margin-top: 5px;
-        margin-bottom: 20px; } }
+        margin: 5px 0 10px 10px; } }
   #content.search .main-content .header-part p {
     font-weight: 200;
     font-size: 1.4em;
@@ -12658,6 +12660,18 @@ section.home-search .home-search-mobile {
     @media screen and (max-width: 435px) {
       #content.search .main-content .tab-pane#salons .image-bloc img, #content.search .main-content .tab-pane#adom .image-bloc img {
         margin-top: -15px; } }
+    @media screen and (max-width: 767px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img.placeholder, #content.search .main-content .tab-pane#adom .image-bloc img.placeholder {
+        margin-top: -50px; } }
+    @media screen and (max-width: 700px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img.placeholder, #content.search .main-content .tab-pane#adom .image-bloc img.placeholder {
+        margin-top: -30px; } }
+    @media screen and (max-width: 540px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img.placeholder, #content.search .main-content .tab-pane#adom .image-bloc img.placeholder {
+        margin-top: -15px; } }
+    @media screen and (max-width: 435px) {
+      #content.search .main-content .tab-pane#salons .image-bloc img.placeholder, #content.search .main-content .tab-pane#adom .image-bloc img.placeholder {
+        margin-top: 0px; } }
   #content.search .main-content .tab-pane#salons .image-bloc .promo-bloc, #content.search .main-content .tab-pane#adom .image-bloc .promo-bloc {
     background-color: #ffc400;
     color: white;
@@ -12803,8 +12817,7 @@ section.home-search .home-search-mobile {
       -moz-transition: 0.25s ease-in-out;
       -ms-transition: 0.25s ease-in-out;
       -o-transition: 0.25s ease-in-out;
-      color: white;
-      background-color: #fe5b5f; }
+      opacity: 0.8; }
   @media screen and (max-width: 767px) {
     #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
       padding-left: 0;
@@ -13069,42 +13082,6 @@ section.home-search .home-search-mobile {
       height: 18px;
       position: absolute;
       left: calc(50% - 65px); }
-  #content.search .sidebar .spinner {
-    width: 70px;
-    text-align: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex; }
-  #content.search .sidebar .spinner > div {
-    width: 15px;
-    height: 15px;
-    background-color: #c4c4c4;
-    border-radius: 100%;
-    display: inline-block;
-    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
-  #content.search .sidebar .spinner .bounce1 {
-    -webkit-animation-delay: -0.32s;
-    animation-delay: -0.32s; }
-  #content.search .sidebar .spinner .bounce2 {
-    -webkit-animation-delay: -0.16s;
-    animation-delay: -0.16s; }
-
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% {
-    -webkit-transform: scale(0); }
-  40% {
-    -webkit-transform: scale(1); } }
-
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% {
-    -webkit-transform: scale(0);
-    transform: scale(0); }
-  40% {
-    -webkit-transform: scale(1);
-    transform: scale(1); } }
   #content.search .sidebar .tag-count {
     color: white;
     font-weight: 400;
@@ -13167,9 +13144,6 @@ section.home-search .home-search-mobile {
 
 #content.search .label-container {
   background-color: #f4f4f4; }
-  @media screen and (max-width: 767px) {
-    #content.search .label-container {
-      padding-left: 10px; } }
 
 #content.search .business-label {
   color: white;
@@ -13224,6 +13198,51 @@ section.home-search .home-search-mobile {
   #content.search .top-reviews a:hover {
     color: inherit;
     text-decoration: none; }
+
+#content.search .spinner {
+  width: 100%;
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center; }
+
+#content.search .spinner > div {
+  width: 15px;
+  height: 15px;
+  background-color: #c4c4c4;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
+
+#content.search .spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
+
+#content.search .spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
 
 @media screen and (max-width: 767px) {
   .bg-white-xs {
