--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13082,6 +13082,27 @@ section.home-search .home-search-mobile {
       height: 18px;
       position: absolute;
       left: calc(50% - 65px); }
+  #content.search .sidebar .suggestions {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-left: 25px;
+    font-size: 1.4em;
+    padding-top: 10px; }
+    #content.search .sidebar .suggestions a:hover {
+      color: inherit;
+      text-decoration: none;
+      cursor: pointer; }
+    #content.search .sidebar .suggestions > a:nth-child(2) {
+      margin-top: 5px; }
   #content.search .sidebar .tag-count {
     color: white;
     font-weight: 400;
