--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1180,6 +1180,21 @@
                 left: calc(50% - 65px);
             }
         }
+        .suggestions {
+            @include flexbox;
+            @include flex-direction(column);
+            margin-left: 25px;
+            font-size: 1.4em;
+            padding-top: 10px;
+            a:hover {
+                color: inherit;
+                text-decoration: none;
+                cursor: pointer;
+            }
+            > a:nth-child(2) {
+                margin-top: 5px;
+            }
+        }
         .tag-count {
             color: white;
             font-weight: $regular;
