--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1331,8 +1331,11 @@
             margin-left: 0;
         }
         .yelp-date {
-            color: $grey;
+            color: $darkgrey;
             font-size: 1.2em;
+        }
+        .green-check {
+            color: $green;
         }
         a {
             text-decoration: underline;
