--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13097,6 +13097,8 @@ section.home-search .home-search-mobile {
     margin-left: 25px;
     font-size: 1.4em;
     padding-top: 10px; }
+    #content.search .sidebar .suggestions a {
+      padding-left: 15px; }
     #content.search .sidebar .suggestions a:hover {
       color: inherit;
       text-decoration: none;
