--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1186,6 +1186,9 @@
             margin-left: 25px;
             font-size: 1.4em;
             padding-top: 10px;
+            a {
+                padding-left: 15px;
+            }
             a:hover {
                 color: inherit;
                 text-decoration: none;
