--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13224,6 +13224,31 @@ section.home-search .home-search-mobile {
     color: inherit;
     text-decoration: none; }
 
+#content.search .price-details {
+  font-size: 1.4em;
+  padding-top: 5px; }
+  @media screen and (max-width: 767px) {
+    #content.search .price-details {
+      padding-left: 10px;
+      font-size: 1em; } }
+  #content.search .price-details a:hover {
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer; }
+  #content.search .price-details .prices {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 10px 0 0 10px; }
+
 #content.search .spinner {
   width: 100%;
   text-align: center;
