--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -1348,6 +1348,24 @@
             text-decoration: none;
         }
     }
+    .price-details {
+        font-size: 1.4em;
+        padding-top: 5px;
+        @media screen and (max-width: $screen-xs-max) {
+            padding-left: 10px;
+            font-size: 1em;
+        }
+        a:hover {
+            color: inherit;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .prices {
+            @include flexbox;
+            @include flex-direction(column);
+            padding: 10px 0 0 10px;
+        }
+    }
     .spinner {
         width: 100%;
         text-align: center;
