--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -349,7 +349,11 @@
                 font-size: 1.4em;
                 color: white;
                 border-radius: 5px;
-                padding: 0px 5px 0px 5px;
+                padding: 5px 10px 10px 10px;
+                margin-left: 5px;
+                cursor: pointer;
+                background: url(../img/search/dots.png) no-repeat center center;
+                background-size: contain;
             }
         }
         .nav {
@@ -798,7 +802,7 @@
                 }
                 .label-container {
                     overflow: hidden;
-                    max-height: 35px;
+                    max-height: 28px;
                     background-color: white;
                     .business-label {
                         color: white;
@@ -1296,7 +1300,12 @@
         .single-comment {
             border-bottom: 1px solid $grey5;
             padding: 15px 0;
+            .user-profil {
+                width: 60px;
+                padding: 0;
+            }
             .user-infos {
+                width: calc(100% - 60px);
                 padding-left: 0px;
             }
             .review {
