--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -176,6 +176,9 @@ a {
     // }
 }
 // Rating stars
+   .ratinstars {
+                            background-color: red;
+                        }
 .stars {
     height: 3.9em;
     padding-left: 0;
