--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -176,9 +176,6 @@ a {
     // }
 }
 // Rating stars
-   .ratinstars {
-                            background-color: red;
-                        }
 .stars {
     height: 3.9em;
     padding-left: 0;
@@ -638,7 +635,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
             }
 
             &:hover {
-                @media screen and (min-width: $screen-md-min) {
+                @media screen and (min-width: $screen-sm-min) {
                     figcaption {
                         opacity: 1;
                     }
