--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9639,9 +9639,6 @@ a {
       #content .address-bloc h2 a:hover, #content .address-bloc h3 a:hover, #content .address-bloc h4 a:hover {
         text-decoration: none; }
 
-.ratinstars  {
-  background-color: red; }
-
 .stars {
   height: 3.9em;
   padding-left: 0; }
@@ -10073,7 +10070,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
         font-weight: 400;
         font-size: 1.2em;
         padding: 10px 8px; }
-    @media screen and (min-width: 992px) {
+    @media screen and (min-width: 768px) {
       .hairfies .single-hairfie figure:hover figcaption {
         opacity: 1; } }
   .hairfies .single-hairfie .pricetag {
@@ -12318,6 +12315,39 @@ section.home-search .home-search-mobile {
     top: 0;
     background: #f4f4f4;
     z-index: -1; }
+  #content.search .main-content .search-content .filter-bar {
+    width: calc(100% - 15px);
+    height: 50px;
+    background-color: white;
+    border: 1px solid #dfdfdf;
+    margin-bottom: 10px; }
+    #content.search .main-content .search-content .filter-bar .filter-title {
+      padding: 3px 20px;
+      height: 100%;
+      line-height: 50px;
+      width: 70%;
+      font-size: 1.4em;
+      text-transform: uppercase; }
+    #content.search .main-content .search-content .filter-bar .filters {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      border-left: 1px solid #dfdfdf;
+      width: 200px;
+      float: right;
+      height: 100%; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .search-content .filter-bar .filters {
+          width: 150px; } }
+      #content.search .main-content .search-content .filter-bar .filters .Select > .Select-control {
+        height: 48px;
+        border: 0; }
+        #content.search .main-content .search-content .filter-bar .filters .Select > .Select-control .Select-placeholder {
+          line-height: 32px;
+          font-weight: 200;
+          padding: 8px 30px 8px 10px; }
+        #content.search .main-content .search-content .filter-bar .filters .Select > .Select-control .Select-arrow {
+          top: 22px; }
   #content.search .main-content .search-content .hairfies > .row {
     margin-left: -5px;
     margin-right: 10px; }
@@ -12327,19 +12357,63 @@ section.home-search .home-search-mobile {
         margin-top: 5px; } }
     #content.search .main-content .search-content .hairfies > .row .single-hairfie {
       padding: 5px; }
+      #content.search .main-content .search-content .hairfies > .row .single-hairfie a:hover, #content.search .main-content .search-content .hairfies > .row .single-hairfie a:focus {
+        text-decoration: none; }
       #content.search .main-content .search-content .hairfies > .row .single-hairfie .hairfie-min {
         position: absolute;
         width: 20%;
         bottom: 5px;
         right: 5px;
         border: 1px solid white; }
+        @media screen and (max-width: 767px) {
+          #content.search .main-content .search-content .hairfies > .row .single-hairfie .hairfie-min {
+            bottom: 55px; } }
+      #content.search .main-content .search-content .hairfies > .row .single-hairfie figcaption .infos {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-direction: normal;
+        -webkit-box-orient: vertical;
+        -webkit-flex-direction: column;
+        -moz-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        -moz-justify-content: center;
+        justify-content: center;
+        height: 100%; }
+        #content.search .main-content .search-content .hairfies > .row .single-hairfie figcaption .infos .business-title {
+          color: #aaaaaa;
+          text-transform: uppercase;
+          font-size: 1.6em; }
+        #content.search .main-content .search-content .hairfies > .row .single-hairfie figcaption .infos .business-name {
+          margin-top: 10px;
+          color: white;
+          font-size: 2.2em; }
+      #content.search .main-content .search-content .hairfies > .row .single-hairfie .infos-mobile {
+        height: 50px;
+        border: 1px solid #dfdfdf;
+        border-top: 0;
+        padding: 3px 10px;
+        background-color: white; }
+        #content.search .main-content .search-content .hairfies > .row .single-hairfie .infos-mobile .business-title {
+          color: #c4c4c4;
+          text-transform: uppercase;
+          font-size: 1.4em; }
+        #content.search .main-content .search-content .hairfies > .row .single-hairfie .infos-mobile .business-name {
+          color: black;
+          font-size: 1.6em; }
     #content.search .main-content .search-content .hairfies > .row .single-business {
       position: relative;
       padding: 5px;
       padding-bottom: calc(33.333333% - 5px); }
       @media screen and (max-width: 767px) {
         #content.search .main-content .search-content .hairfies > .row .single-business {
-          padding-bottom: 49%; } }
+          padding-bottom: 63%; } }
       #content.search .main-content .search-content .hairfies > .row .single-business .business {
         position: absolute;
         width: calc(100% - 10px);
@@ -12357,7 +12431,7 @@ section.home-search .home-search-mobile {
           width: 60%;
           height: 100%;
           color: white;
-          padding: 20px 50px;
+          padding: 10px 0 10px 50px;
           display: -webkit-box;
           display: -webkit-flex;
           display: -moz-flex;
@@ -12368,13 +12442,29 @@ section.home-search .home-search-mobile {
           -webkit-flex-direction: column;
           -moz-flex-direction: column;
           -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          -webkit-justify-content: center;
+          -moz-justify-content: center;
+          justify-content: center; }
+          @media screen and (max-width: 767px) {
+            #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos {
+              width: 55%;
+              right: 5%;
+              padding: 18px 10px; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .name {
             text-transform: uppercase;
             font-size: 2em;
             font-weight: 400; }
+            @media screen and (max-width: 767px) {
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .name {
+                font-size: 1.6em; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .city {
             font-size: 1.8em; }
+            @media screen and (max-width: 767px) {
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .city {
+                font-size: 1.4em; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .rating-stars {
             width: 100%;
             display: -webkit-box;
@@ -12387,20 +12477,63 @@ section.home-search .home-search-mobile {
             -webkit-align-items: center;
             -moz-align-items: center;
             align-items: center;
-            font-size: 1.6em; }
+            font-size: 1.4em; }
+            @media screen and (max-width: 767px) {
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .rating-stars {
+                font-size: 1.4em; } }
             #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .rating-stars .stars {
               height: auto; }
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .rating-stars .stars .star {
                 width: 20px;
-                height: 20px; }
+                height: 20px;
+                margin: 2px; }
+                @media screen and (max-width: 767px) {
+                  #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .rating-stars .stars .star {
+                    width: 16px;
+                    height: 16px;
+                    margin: 1px; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level {
             font-size: 2.4em;
             font-weight: 200; }
+            @media screen and (max-width: 767px) {
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level {
+                font-size: 1.8em; }
+                #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level span {
+                  margin: 2px; } }
             #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level .grey {
               color: #c4c4c4; }
+          #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container {
+            margin-top: 5px;
+            margin-bottom: 15px; }
+            #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container .selection {
+              border: 1px solid white;
+              font-size: 1.6em;
+              text-transform: uppercase;
+              padding: 4px 10px;
+              border-radius: 2px;
+              margin-bottom: 10px;
+              padding-left: 35px; }
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container .selection:before {
+                content: ' ';
+                background: url(../img/search/star.svg) no-repeat center center;
+                background-size: contain;
+                width: 18px;
+                height: 18px;
+                left: 60px;
+                position: absolute; }
+                @media screen and (max-width: 767px) {
+                  #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container .selection:before {
+                    left: 20px; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .btn-book {
-            padding: 5px 6px;
-            width: 150px; }
+            padding: 7px 3px;
+            width: 120px;
+            font-size: 1.5em;
+            font-weight: 200; }
+            @media screen and (max-width: 767px) {
+              #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .btn-book {
+                font-size: 1.4em;
+                padding: 7px 10px;
+                width: 110px; } }
 
 #content.search .main-content .header-part {
   padding: 0; }
