--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -345,6 +345,9 @@
                             top: 22px;
                         }
                     }
+                    .Select-option {
+                        font-weight: $light;
+                    }
                 }
             }
             .hairfies > .row {
