--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12382,20 +12382,20 @@ section.home-search .home-search-mobile {
         -moz-flex-direction: column;
         -ms-flex-direction: column;
         flex-direction: column;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        justify-content: center;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
+        -webkit-justify-content: flex-end;
+        -moz-justify-content: flex-end;
+        justify-content: flex-end;
         height: 100%; }
         #content.search .main-content .search-content .hairfies > .row .single-hairfie figcaption .infos .business-title {
           color: #aaaaaa;
           text-transform: uppercase;
           font-size: 1.6em; }
         #content.search .main-content .search-content .hairfies > .row .single-hairfie figcaption .infos .business-name {
-          margin-top: 10px;
+          margin-top: 5px;
           color: white;
-          font-size: 2.2em; }
+          font-size: 1.8em; }
       #content.search .main-content .search-content .hairfies > .row .single-hairfie .infos-mobile {
         height: 50px;
         border: 1px solid #dfdfdf;
@@ -12454,16 +12454,18 @@ section.home-search .home-search-mobile {
             #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos {
               width: 55%;
               right: 5%;
-              padding: 18px 10px; } }
+              padding: 5px 10px; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .name {
             text-transform: uppercase;
             font-size: 2em;
+            line-height: 14px;
             font-weight: 400; }
             @media screen and (max-width: 767px) {
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .name {
                 font-size: 1.6em; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .city {
-            font-size: 1.8em; }
+            font-size: 1.8em;
+            margin-top: 3px; }
             @media screen and (max-width: 767px) {
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .city {
                 font-size: 1.4em; } }
@@ -12496,7 +12498,8 @@ section.home-search .home-search-mobile {
                     margin: 1px; } }
           #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level {
             font-size: 2.4em;
-            font-weight: 200; }
+            font-weight: 200;
+            margin-bottom: 5px; }
             @media screen and (max-width: 767px) {
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .price-level {
                 font-size: 1.8em; }
@@ -12515,6 +12518,9 @@ section.home-search .home-search-mobile {
               border-radius: 2px;
               margin-bottom: 10px;
               padding-left: 35px; }
+              @media screen and (max-width: 767px) {
+                #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container .selection {
+                  font-size: 1.4em; } }
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .selection-container .selection:before {
                 content: ' ';
                 background: url(../img/search/star.svg) no-repeat center center;
@@ -12533,9 +12539,9 @@ section.home-search .home-search-mobile {
             font-weight: 200; }
             @media screen and (max-width: 767px) {
               #content.search .main-content .search-content .hairfies > .row .single-business .business .business-infos .btn-book {
-                font-size: 1.4em;
+                font-size: 1.3em;
                 padding: 7px 10px;
-                width: 110px; } }
+                width: 100px; } }
 
 #content.search .main-content .header-part {
   padding: 0; }
