--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -588,6 +588,37 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 
     .single-hairfie {
         padding: 5px;
+        a:hover, a:focus {
+            text-decoration: none;
+        }
+        .hairfie-min {
+            position: absolute;
+            width: 20%;
+            bottom: 5px;
+            right: 5px;
+            border: 1px solid white;
+            @media screen and (max-width: $screen-xs-max) {
+                bottom: 55px;
+            }
+        }
+        figcaption {
+            .infos {
+                @include flexbox;
+                @include flex-direction(column);
+                @include justify-content(flex-end);
+                height: 100%;
+                .business-title {
+                    color: $grey1;
+                    text-transform: uppercase;
+                    font-size: 1.6em;
+                }
+                .business-name {
+                    margin-top: 5px;
+                    color: white;
+                    font-size: 1.8em;
+                }
+            }
+        }
         @media screen and (min-width: $screen-md-min) {
             padding: 5px 10px 5px 0;
         }
